Fixed menu width on mobile

--- a/_sass/git-wiki-style.scss
+++ b/_sass/git-wiki-style.scss
@@ -122,7 +122,7 @@ img {
 }
 
 #git-wiki-sidebar {
-  width: 280px;
+  width: 280px !important;
   float: left;
   position: relative !important;
   -webkit-font-smoothing: subpixel-antialiased;
